Migration of html files to the `ru-RU` folder

--- a/ru-RU/services.html
+++ b/ru-RU/services.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Finanlitcy | Reset Password</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.css">
+    <title>Finanlitcy | Services</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/slick.css">
+    <link rel="stylesheet" href="../css/jquery.fancybox.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@400;700&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -25,31 +25,31 @@
                 <button class="modal__close"></button>
                 <div class="modal__inner">
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/facebook.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/facebook.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/pinterest.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/pinterest.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/instagram.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/instagram.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/telegram.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/telegram.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/twitter.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/twitter.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/vk.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/vk.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/copy 1.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/copy 1.svg" alt="">
                     </a>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         <span class="burger"></span>
                     </div>
                     <a href="index.html" class="header__logo">
-                        <img src="images/logo.png" alt="">
+                        <img src="../images/logo.png" alt="">
                     </a>
                     <ul class="lang-switcher">
                         <a href="#" class="lang-ru">
@@ -89,7 +89,7 @@
                         <img src="https://via.placeholder.com/70" alt="">
                     </a>
                     <div class="header__search">
-                        <img src="images/ico/loupe.svg" alt="">
+                        <img src="../images/ico/loupe.svg" alt="">
                     </div>
                     <label class="header__search-box">
                         <input type="search" class="search__box" placeholder="Введите ключевое слово">
@@ -125,19 +125,19 @@
             <ul class="sideMenu__burger-box">
                 <li class="sideMenu__burger-item">
                     <a href="#transfer" class="sideMenu__ico-link">
-                        <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Переводы</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
                     <a href="#transaction" class="sideMenu__ico-link">
-                        <img src="images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Транзакции</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
                     <a href="#" class="sideMenu__ico-link">
-                        <img src="images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Выйти</span>
                     </a>
                 </li>
@@ -145,11 +145,11 @@
 
             <div class="sideMenu__burger-footer">
                 <a href="#support" class="sideMenu__birger-ico__link">
-                    <img src="images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
+                    <img src="../images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
                     <span class="sideMenu__burger-text">Тех. Поддержка </span>
                 </a>
                 <a href="#" class="sideMenu__settings">
-                    <img class="sideMenu__burger-ico__img" src="images/ico/settings.svg" alt="">
+                    <img class="sideMenu__burger-ico__img" src="../images/ico/settings.svg" alt="">
                     <span class="sideMenu__burger-text">Настройки</span>
                 </a>
             </div>
@@ -157,28 +157,61 @@
         </div>
     </section>
 
-    <section class="main main--third">
+    <section class="main main--second">
         <div class="container">
-            <div class="post__box post__box--second post__box--third">
-                <div class="post__sign-content post__sign-content--second">
-                    <h1 class="post__sign-title">восстановление пароля</h1>
-                    <form class="post__sign-form">
-                        <label>
-                            <input type="text" placeholder="ИИН" class="sign-id sign-input">
-                        </label>
-                        <label>
-                            <input type="tel" placeholder="Номер телефона" class="sign-tel sign-input">
-                        </label>
-                        <label>
-                            <input type="email" placeholder="E-mail адрес" class="sign-email sign-input">
-                        </label>
-                        <div class="post__sign-btns">
-                            <a href="reset-password-verification.html" class="btn-sign btn-sign--third">ОТПРАВИТЬ</a>
-                            <p class="post__sign-btns__warning">Сообщение о смене пароля будет отправлено на вашу почту,
-                                которую вы указали при регистрации</p>
+            <div class="post__box post__box-forth">
+                <h1 class="post__title">наши услуги</h1>
+                <div class="post__box-services__content">
+                    <div class="post__box-services__item">
+                        <div class="post__box-services__item-img1">
+                            <a href="#" class="post__box-services__more">Заказать</a>
+                            <div class="post__box-services__text">Составление личного финансового плана</div>
+                            <div class="post__box-services__price">От 2 000 KZT</div>
                         </div>
-                    </form>
+                    </div>
+                    <div class="post__box-services__item">
+                        <div class="post__box-services__item-img2">
+                            <a href="#" class="post__box-services__more post__box-services__more--dark">Заказать</a>
+                            <div class="post__box-services__text post__box-services__text--dark">Консультация со
+                                специалистом
+                            </div>
+                            <div class="post__box-services__price post__box-services__price--dark ">От 1 000 KZT</div>
+                        </div>
+                    </div>
+                    <div class="post__box-services__item">
+                        <div class="post__box-services__item-img3">
+                            <a href="#" class="post__box-services__more">Заказать</a>
+                            <div class="post__box-services__text">Помощь в получении финансирования</div>
+                            <div class="post__box-services__price">От 5 000 KZT</div>
+                        </div>
+                    </div>
+                    <div class="post__box-services__item">
+                        <div class="post__box-services__item-img4">
+                            <a href="#" class="post__box-services__more post__box-services__more--dark">Заказать</a>
+                            <div class="post__box-services__text post__box-services__text--dark">Бизнес планирование,
+                                составление бизнес плана
+                            </div>
+                            <div class="post__box-services__price post__box-services__price--dark ">От 5 000 KZT</div>
+                        </div>
+                    </div>
+                    <div class="post__box-services__item">
+                        <div class="post__box-services__item-img5">
+                            <a href="#" class="post__box-services__more">Заказать</a>
+                            <div class="post__box-services__text">Помощь в дальнейшем продвижении</div>
+                            <div class="post__box-services__price">От 1 000 KZT</div>
+                        </div>
+                    </div>
+                    <div class="post__box-services__item">
+                        <div class="post__box-services__item-img6">
+                            <a href="#" class="post__box-services__more post__box-services__more--dark">Заказать</a>
+                            <div class="post__box-services__text post__box-services__text--dark">Как сэкономить на
+                                покупках?
+                            </div>
+                            <div class="post__box-services__price post__box-services__price--dark ">От 500 KZT</div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -187,7 +220,7 @@
         <div class="container">
             <div class="footer__top">
                 <div class="footer__logo">
-                    <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+                    <a href="#"><img src="../images/logo-2.png" alt="logo" class="footer__logo-img"></a>
                 </div>
                 <nav class="footer__nav">
                     <a href="services.html" class="footer__nav-link">Offer</a>
@@ -204,14 +237,14 @@
                 </nav>
                 <div class="footer__social-box">
                     <div class="footer__social">
-                        <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/pinterest.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/vk.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/facebook.svg" alt="social"></a>
                     </div>
                     <div class="footer__social">
-                        <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/instagram.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/telegram.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/twitter.svg" alt="social"></a>
                     </div>
                 </div>
                 <div class="footer__contacts">
@@ -237,8 +270,8 @@
                     <a href="#" class="footer__link">Cookies Settings</a>
                 </div>
                 <div class="footer__apps">
-                    <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
-                    <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+                    <a href="#"><img class="footer__app" src="../images/google-play.png" alt="google"></a>
+                    <a href="#"><img class="footer__app" src="../images/app-store.png" alt="google"></a>
                 </div>
                 <button class="footer__btn"></button>
             </div>
@@ -248,7 +281,7 @@
             <div class="footer__top-mini">
                 <div class="footer__top-mini__inner">
                     <div class="footer__logo">
-                        <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+                        <a href="#"><img src="../images/logo-2.png" alt="logo" class="footer__logo-img"></a>
                     </div>
                     <div class="footer__copy">© 2021 Finanlitcy | Финансовая грамотность</div>
                 </div>
@@ -275,16 +308,19 @@
                 <div class="footer__social-mini__inner">
                     <div class="footer__social-box">
                         <div class="footer__social">
-                            <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg"
+                            <a href="#"><img class="footer__social-item" src="../images/ico/pinterest.svg"
                                     alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/vk.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/facebook.svg"
+                                    alt="social"></a>
                         </div>
                         <div class="footer__social">
-                            <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg"
+                            <a href="#"><img class="footer__social-item" src="../images/ico/instagram.svg"
                                     alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/telegram.svg"
+                                    alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/twitter.svg"
+                                    alt="social"></a>
                         </div>
                     </div>
                 </div>
@@ -293,8 +329,8 @@
             <div class="footer__apps-mini">
                 <div class="footer__apps-mini__inner">
                     <div class="footer__apps">
-                        <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
-                        <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+                        <a href="#"><img class="footer__app" src="../images/google-play.png" alt="google"></a>
+                        <a href="#"><img class="footer__app" src="../images/app-store.png" alt="google"></a>
                     </div>
                 </div>
             </div>
@@ -331,9 +367,9 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.fancybox.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/slick.min.js"></script>
+    <script src="../js/jquery.fancybox.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
