--- a/ru-RU/about.html
+++ b/ru-RU/about.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Finanlitcy | Services</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.css">
+    <title>Finanlitcy | About</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/slick.css">
+    <link rel="stylesheet" href="../css/jquery.fancybox.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@400;700&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -25,31 +25,31 @@
                 <button class="modal__close"></button>
                 <div class="modal__inner">
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/facebook.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/facebook.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/pinterest.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/pinterest.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/instagram.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/instagram.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/telegram.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/telegram.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/twitter.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/twitter.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/vk.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/vk.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/copy 1.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/copy 1.svg" alt="">
                     </a>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         <span class="burger"></span>
                     </div>
                     <a href="index.html" class="header__logo">
-                        <img src="images/logo.png" alt="">
+                        <img src="../images/logo.png" alt="">
                     </a>
                     <ul class="lang-switcher">
                         <a href="#" class="lang-ru">
@@ -89,7 +89,7 @@
                         <img src="https://via.placeholder.com/70" alt="">
                     </a>
                     <div class="header__search">
-                        <img src="images/ico/loupe.svg" alt="">
+                        <img src="../images/ico/loupe.svg" alt="">
                     </div>
                     <label class="header__search-box">
                         <input type="search" class="search__box" placeholder="Введите ключевое слово">
@@ -125,19 +125,19 @@
             <ul class="sideMenu__burger-box">
                 <li class="sideMenu__burger-item">
                     <a href="#transfer" class="sideMenu__ico-link">
-                        <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Переводы</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
                     <a href="#transaction" class="sideMenu__ico-link">
-                        <img src="images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Транзакции</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
                     <a href="#" class="sideMenu__ico-link">
-                        <img src="images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Выйти</span>
                     </a>
                 </li>
@@ -145,11 +145,11 @@
 
             <div class="sideMenu__burger-footer">
                 <a href="#support" class="sideMenu__birger-ico__link">
-                    <img src="images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
+                    <img src="../images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
                     <span class="sideMenu__burger-text">Тех. Поддержка </span>
                 </a>
                 <a href="#" class="sideMenu__settings">
-                    <img class="sideMenu__burger-ico__img" src="images/ico/settings.svg" alt="">
+                    <img class="sideMenu__burger-ico__img" src="../images/ico/settings.svg" alt="">
                     <span class="sideMenu__burger-text">Настройки</span>
                 </a>
             </div>
@@ -159,59 +159,53 @@
 
     <section class="main main--second">
         <div class="container">
-            <div class="post__box post__box-forth">
-                <h1 class="post__title">наши услуги</h1>
-                <div class="post__box-services__content">
-                    <div class="post__box-services__item">
-                        <div class="post__box-services__item-img1">
-                            <a href="#" class="post__box-services__more">Заказать</a>
-                            <div class="post__box-services__text">Составление личного финансового плана</div>
-                            <div class="post__box-services__price">От 2 000 KZT</div>
-                        </div>
+            <div class="post__box">
+                <div class="post__box-wrapper">
+
+                    <div class="post__content">
+                        <h1 class="post__title">Кто мы такие?</h1>
+                        <p class="post__text">Мы компания, которая помогает вам разобраться в финансовой грамотности и
+                            помочь
+                            вам сохранить или сэкономить ваши денежные средства.
+                        </p>
+                        <p class="post__text">В первую очередь вы должны понимать, что финансовая грамотность – это
+                            знания и
+                            навыки, которые помогают принимать взвешенные и разумные решения в отношении финансов. Чтобы
+                            считаться финансово грамотным, нужно разбираться в основных финансовых понятиях,
+                            ориентироваться
+                            в
+                            услугах финансовых институтов и использовать их с осознанием плюсов, минусов и рисков,
+                            правильно
+                            оценивать ситуацию на рынке, управлять финансами: вести бюджет, планировать траты,
+                            накапливать
+                            сбережения и по возможности избегать долгов.
+                            И поэтому обращаясь к нам, вы можете планировать свой бюджет, смотреть на ваши расходы и
+                            доходы
+                            за
+                            год, месяц, либо неделю.
+                        </p>
                     </div>
-                    <div class="post__box-services__item">
-                        <div class="post__box-services__item-img2">
-                            <a href="#" class="post__box-services__more post__box-services__more--dark">Заказать</a>
-                            <div class="post__box-services__text post__box-services__text--dark">Консультация со
-                                специалистом
-                            </div>
-                            <div class="post__box-services__price post__box-services__price--dark ">От 1 000 KZT</div>
-                        </div>
-                    </div>
-                    <div class="post__box-services__item">
-                        <div class="post__box-services__item-img3">
-                            <a href="#" class="post__box-services__more">Заказать</a>
-                            <div class="post__box-services__text">Помощь в получении финансирования</div>
-                            <div class="post__box-services__price">От 5 000 KZT</div>
-                        </div>
-                    </div>
-                    <div class="post__box-services__item">
-                        <div class="post__box-services__item-img4">
-                            <a href="#" class="post__box-services__more post__box-services__more--dark">Заказать</a>
-                            <div class="post__box-services__text post__box-services__text--dark">Бизнес планирование,
-                                составление бизнес плана
-                            </div>
-                            <div class="post__box-services__price post__box-services__price--dark ">От 5 000 KZT</div>
-                        </div>
-                    </div>
-                    <div class="post__box-services__item">
-                        <div class="post__box-services__item-img5">
-                            <a href="#" class="post__box-services__more">Заказать</a>
-                            <div class="post__box-services__text">Помощь в дальнейшем продвижении</div>
-                            <div class="post__box-services__price">От 1 000 KZT</div>
-                        </div>
-                    </div>
-                    <div class="post__box-services__item">
-                        <div class="post__box-services__item-img6">
-                            <a href="#" class="post__box-services__more post__box-services__more--dark">Заказать</a>
-                            <div class="post__box-services__text post__box-services__text--dark">Как сэкономить на
-                                покупках?
-                            </div>
-                            <div class="post__box-services__price post__box-services__price--dark ">От 500 KZT</div>
-                        </div>
+                    <div class="post__img">
+                        <img src="../images/post-img1.png" alt="post">
                     </div>
                 </div>
+            </div>
 
+            <div class="post__box">
+                <div class="post__box-wrapper">
+                    <div class="post__content">
+                        <h1 class="post__title">наша история</h1>
+                        <p class="post__text">Наша компания была основана в 1996 году, а в сеть мы вышли в 2000 году. Мы
+                            были не очень популярны, но в дальнейшем к нам стали обращаться все больше и больше людей. И
+                            из-за этого от маленькой компании по обучению финансовой грамотности мы превратились в
+                            большую
+                            компанию.
+                        </p>
+                    </div>
+                    <div class="post__img">
+                        <img src="../images/post-img2.png" alt="post">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -220,7 +214,7 @@
         <div class="container">
             <div class="footer__top">
                 <div class="footer__logo">
-                    <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+                    <a href="#"><img src="../images/logo-2.png" alt="logo" class="footer__logo-img"></a>
                 </div>
                 <nav class="footer__nav">
                     <a href="services.html" class="footer__nav-link">Offer</a>
@@ -237,14 +231,14 @@
                 </nav>
                 <div class="footer__social-box">
                     <div class="footer__social">
-                        <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/pinterest.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/vk.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/facebook.svg" alt="social"></a>
                     </div>
                     <div class="footer__social">
-                        <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/instagram.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/telegram.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/twitter.svg" alt="social"></a>
                     </div>
                 </div>
                 <div class="footer__contacts">
@@ -270,8 +264,8 @@
                     <a href="#" class="footer__link">Cookies Settings</a>
                 </div>
                 <div class="footer__apps">
-                    <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
-                    <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+                    <a href="#"><img class="footer__app" src="../images/google-play.png" alt="google"></a>
+                    <a href="#"><img class="footer__app" src="../images/app-store.png" alt="google"></a>
                 </div>
                 <button class="footer__btn"></button>
             </div>
@@ -281,7 +275,7 @@
             <div class="footer__top-mini">
                 <div class="footer__top-mini__inner">
                     <div class="footer__logo">
-                        <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+                        <a href="#"><img src="../images/logo-2.png" alt="logo" class="footer__logo-img"></a>
                     </div>
                     <div class="footer__copy">© 2021 Finanlitcy | Финансовая грамотность</div>
                 </div>
@@ -308,16 +302,19 @@
                 <div class="footer__social-mini__inner">
                     <div class="footer__social-box">
                         <div class="footer__social">
-                            <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg"
+                            <a href="#"><img class="footer__social-item" src="../images/ico/pinterest.svg"
                                     alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/vk.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/facebook.svg"
+                                    alt="social"></a>
                         </div>
                         <div class="footer__social">
-                            <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg"
+                            <a href="#"><img class="footer__social-item" src="../images/ico/instagram.svg"
                                     alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/telegram.svg"
+                                    alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/twitter.svg"
+                                    alt="social"></a>
                         </div>
                     </div>
                 </div>
@@ -326,8 +323,8 @@
             <div class="footer__apps-mini">
                 <div class="footer__apps-mini__inner">
                     <div class="footer__apps">
-                        <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
-                        <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+                        <a href="#"><img class="footer__app" src="../images/google-play.png" alt="google"></a>
+                        <a href="#"><img class="footer__app" src="../images/app-store.png" alt="google"></a>
                     </div>
                 </div>
             </div>
@@ -364,9 +361,9 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.fancybox.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/slick.min.js"></script>
+    <script src="../js/jquery.fancybox.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
