--- a/ru-RU/profile.html
+++ b/ru-RU/profile.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Finanlitcy | Profile</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/jquery.fancybox.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/slick.css">
+  <link rel="stylesheet" href="../css/jquery.fancybox.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@400;700&family=PT+Sans:wght@400;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -25,31 +25,31 @@
         <button class="modal__close"></button>
         <div class="modal__inner">
           <a href="#" class="modal__link">
-            <img class="modal__img" src="images/ico/modal/facebook.svg" alt="">
+            <img class="modal__img" src="../images/ico/modal/facebook.svg" alt="">
           </a>
 
           <a href="#" class="modal__link">
-            <img class="modal__img" src="images/ico/modal/pinterest.svg" alt="">
+            <img class="modal__img" src="../images/ico/modal/pinterest.svg" alt="">
           </a>
 
           <a href="#" class="modal__link">
-            <img class="modal__img" src="images/ico/modal/instagram.svg" alt="">
+            <img class="modal__img" src="../images/ico/modal/instagram.svg" alt="">
           </a>
 
           <a href="#" class="modal__link">
-            <img class="modal__img" src="images/ico/modal/telegram.svg" alt="">
+            <img class="modal__img" src="../images/ico/modal/telegram.svg" alt="">
           </a>
 
           <a href="#" class="modal__link">
-            <img class="modal__img" src="images/ico/modal/twitter.svg" alt="">
+            <img class="modal__img" src="../images/ico/modal/twitter.svg" alt="">
           </a>
 
           <a href="#" class="modal__link">
-            <img class="modal__img" src="images/ico/modal/vk.svg" alt="">
+            <img class="modal__img" src="../images/ico/modal/vk.svg" alt="">
           </a>
 
           <a href="#" class="modal__link">
-            <img class="modal__img" src="images/ico/modal/copy 1.svg" alt="">
+            <img class="modal__img" src="../images/ico/modal/copy 1.svg" alt="">
           </a>
         </div>
       </div>
@@ -64,7 +64,7 @@
             <span class="burger"></span>
           </div>
           <a href="index.html" class="header__logo">
-            <img src="images/logo.png" alt="">
+            <img src="../images/logo.png" alt="">
           </a>
           <ul class="lang-switcher">
             <a href="#" class="lang-ru">
@@ -89,7 +89,7 @@
             <img src="https://via.placeholder.com/70" alt="">
           </a>
           <div class="header__search">
-            <img src="images/ico/loupe.svg" alt="">
+            <img src="../images/ico/loupe.svg" alt="">
           </div>
           <label class="header__search-box">
             <input type="search" class="search__box" placeholder="Введите ключевое слово">
@@ -104,7 +104,7 @@
       <ul class="sideMenu__ico-box">
         <li class="sideMenu__ico">
           <a href="#myBalance" class="sideMenu__ico-link">
-            <img src="images/ico/wallet.svg" alt="" class="sideMenu__ico-img">
+            <img src="../images/ico/wallet.svg" alt="" class="sideMenu__ico-img">
             <div class="sideMenu__ico-text__box">
               <p class="sideMenu__text">Мой денежный баланс</p>
               <span class="sideMenu__text-wallet">7 800 699 KZT</span>
@@ -113,7 +113,7 @@
         </li>
         <li class="sideMenu__ico">
           <a href="#profit" class="sideMenu__ico-link">
-            <img src="images/ico/exchange.svg" alt="" class="sideMenu__ico-img">
+            <img src="../images/ico/exchange.svg" alt="" class="sideMenu__ico-img">
             <div class="sideMenu__ico-text__box">
               <p class="sideMenu__text">Прибыль</p>
               <span class="sideMenu__text-exchange">25%</span>
@@ -122,32 +122,32 @@
         </li>
         <li class="sideMenu__ico">
           <a href="#profit" class="sideMenu__ico-link">
-            <img src="images/ico/profits.svg" alt="" class="sideMenu__ico-img">
+            <img src="../images/ico/profits.svg" alt="" class="sideMenu__ico-img">
             <span class="sideMenu__text">График прибыли</span>
           </a>
         </li>
         <li class="sideMenu__ico">
           <a href="#transaction" class="sideMenu__ico-link">
-            <img src="images/ico/coins.svg" alt="" class="sideMenu__ico-img">
+            <img src="../images/ico/coins.svg" alt="" class="sideMenu__ico-img">
             <span class="sideMenu__text">Транзакции</span>
           </a>
         </li>
         <li class="sideMenu__ico">
           <a href="#transfer" class="sideMenu__ico-link">
-            <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__ico-img">
+            <img src="../images/ico/money-transfer.svg" alt="" class="sideMenu__ico-img">
             <span class="sideMenu__text">Переводы</span>
           </a>
         </li>
         <li class="sideMenu__ico">
           <a href="#support" class="sideMenu__ico-link">
-            <img src="images/ico/support.svg" alt="" class="sideMenu__ico-img">
+            <img src="../images/ico/support.svg" alt="" class="sideMenu__ico-img">
             <span class="sideMenu__text">Тех. Поддержка </span>
           </a>
         </li>
       </ul>
       <div class="sideMenu__footer">
         <a href="#" class="sideMenu__settings">
-          <img class="sideMenu__ico-img" src="images/ico/settings.svg" alt="">
+          <img class="sideMenu__ico-img" src="../images/ico/settings.svg" alt="">
           <span class="sideMenu__text">Настройки</span>
         </a>
       </div>
@@ -180,19 +180,19 @@
       <ul class="sideMenu__burger-box">
         <li class="sideMenu__burger-item">
           <a href="#transfer" class="sideMenu__ico-link">
-            <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
+            <img src="../images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
             <span class="sideMenu__burger-text">Переводы</span>
           </a>
         </li>
         <li class="sideMenu__burger-item">
           <a href="#transaction" class="sideMenu__ico-link">
-            <img src="images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
+            <img src="../images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
             <span class="sideMenu__burger-text">Транзакции</span>
           </a>
         </li>
         <li class="sideMenu__burger-item">
           <a href="#" class="sideMenu__ico-link">
-            <img src="images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
+            <img src="../images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
             <span class="sideMenu__burger-text">Выйти</span>
           </a>
         </li>
@@ -200,11 +200,11 @@
 
       <div class="sideMenu__burger-footer">
         <a href="#support" class="sideMenu__birger-ico__link">
-          <img src="images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
+          <img src="../images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
           <span class="sideMenu__burger-text">Тех. Поддержка </span>
         </a>
         <a href="#" class="sideMenu__settings">
-          <img class="sideMenu__burger-ico__img" src="images/ico/settings.svg" alt="">
+          <img class="sideMenu__burger-ico__img" src="../images/ico/settings.svg" alt="">
           <span class="sideMenu__burger-text">Настройки</span>
         </a>
       </div>
@@ -298,7 +298,7 @@
                 <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
               </div>
             </div>
-            <img src="images/graph/1.png" alt="" class="post__graph-graph-img">
+            <img src="../images/graph/1.png" alt="" class="post__graph-graph-img">
             <div class="cursor"></div>
           </div>
         </div>
@@ -492,7 +492,7 @@
                 <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
               </div>
             </div>
-            <img src="images/graph/2.png" alt="" class="post__graph-graph-img">
+            <img src="../images/graph/2.png" alt="" class="post__graph-graph-img">
             <div class="cursor--yellow"></div>
             <div class="cursor--brown"></div>
           </div>
@@ -516,7 +516,7 @@
     <div class="container">
       <div class="footer__top">
         <div class="footer__logo">
-          <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+          <a href="#"><img src="../images/logo-2.png" alt="logo" class="footer__logo-img"></a>
         </div>
         <nav class="footer__nav">
           <a href="services.html" class="footer__nav-link">Offer</a>
@@ -533,14 +533,14 @@
         </nav>
         <div class="footer__social-box">
           <div class="footer__social">
-            <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg" alt="social"></a>
-            <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-            <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+            <a href="#"><img class="footer__social-item" src="../images/ico/pinterest.svg" alt="social"></a>
+            <a href="#"><img class="footer__social-item" src="../images/ico/vk.svg" alt="social"></a>
+            <a href="#"><img class="footer__social-item" src="../images/ico/facebook.svg" alt="social"></a>
           </div>
           <div class="footer__social">
-            <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg" alt="social"></a>
-            <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-            <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+            <a href="#"><img class="footer__social-item" src="../images/ico/instagram.svg" alt="social"></a>
+            <a href="#"><img class="footer__social-item" src="../images/ico/telegram.svg" alt="social"></a>
+            <a href="#"><img class="footer__social-item" src="../images/ico/twitter.svg" alt="social"></a>
           </div>
         </div>
         <div class="footer__contacts">
@@ -566,8 +566,8 @@
           <a href="#" class="footer__link">Cookies Settings</a>
         </div>
         <div class="footer__apps">
-          <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
-          <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+          <a href="#"><img class="footer__app" src="../images/google-play.png" alt="google"></a>
+          <a href="#"><img class="footer__app" src="../images/app-store.png" alt="google"></a>
         </div>
         <button class="footer__btn"></button>
       </div>
@@ -577,7 +577,7 @@
       <div class="footer__top-mini">
         <div class="footer__top-mini__inner">
           <div class="footer__logo">
-            <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+            <a href="#"><img src="../images/logo-2.png" alt="logo" class="footer__logo-img"></a>
           </div>
           <div class="footer__copy">© 2021 Finanlitcy | Финансовая грамотность</div>
         </div>
@@ -604,14 +604,14 @@
         <div class="footer__social-mini__inner">
           <div class="footer__social-box">
             <div class="footer__social">
-              <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg" alt="social"></a>
-              <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-              <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+              <a href="#"><img class="footer__social-item" src="../images/ico/pinterest.svg" alt="social"></a>
+              <a href="#"><img class="footer__social-item" src="../images/ico/vk.svg" alt="social"></a>
+              <a href="#"><img class="footer__social-item" src="../images/ico/facebook.svg" alt="social"></a>
             </div>
             <div class="footer__social">
-              <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg" alt="social"></a>
-              <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-              <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+              <a href="#"><img class="footer__social-item" src="../images/ico/instagram.svg" alt="social"></a>
+              <a href="#"><img class="footer__social-item" src="../images/ico/telegram.svg" alt="social"></a>
+              <a href="#"><img class="footer__social-item" src="../images/ico/twitter.svg" alt="social"></a>
             </div>
           </div>
         </div>
@@ -620,8 +620,8 @@
       <div class="footer__apps-mini">
         <div class="footer__apps-mini__inner">
           <div class="footer__apps">
-            <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
-            <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+            <a href="#"><img class="footer__app" src="../images/google-play.png" alt="google"></a>
+            <a href="#"><img class="footer__app" src="../images/app-store.png" alt="google"></a>
           </div>
         </div>
       </div>
@@ -660,9 +660,9 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/slick.min.js"></script>
+  <script src="../js/jquery.fancybox.min.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 
 </html>
