--- a/ru-RU/reset-password.html
+++ b/ru-RU/reset-password.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Finanlitcy | Sign-up</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.css">
+    <title>Finanlitcy | Reset Password</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/slick.css">
+    <link rel="stylesheet" href="../css/jquery.fancybox.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@400;700&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -25,31 +25,31 @@
                 <button class="modal__close"></button>
                 <div class="modal__inner">
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/facebook.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/facebook.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/pinterest.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/pinterest.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/instagram.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/instagram.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/telegram.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/telegram.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/twitter.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/twitter.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/vk.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/vk.svg" alt="">
                     </a>
 
                     <a href="#" class="modal__link">
-                        <img class="modal__img" src="images/ico/modal/copy 1.svg" alt="">
+                        <img class="modal__img" src="../images/ico/modal/copy 1.svg" alt="">
                     </a>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         <span class="burger"></span>
                     </div>
                     <a href="index.html" class="header__logo">
-                        <img src="images/logo.png" alt="">
+                        <img src="../images/logo.png" alt="">
                     </a>
                     <ul class="lang-switcher">
                         <a href="#" class="lang-ru">
@@ -89,7 +89,7 @@
                         <img src="https://via.placeholder.com/70" alt="">
                     </a>
                     <div class="header__search">
-                        <img src="images/ico/loupe.svg" alt="">
+                        <img src="../images/ico/loupe.svg" alt="">
                     </div>
                     <label class="header__search-box">
                         <input type="search" class="search__box" placeholder="Введите ключевое слово">
@@ -125,19 +125,19 @@
             <ul class="sideMenu__burger-box">
                 <li class="sideMenu__burger-item">
                     <a href="#transfer" class="sideMenu__ico-link">
-                        <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Переводы</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
                     <a href="#transaction" class="sideMenu__ico-link">
-                        <img src="images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Транзакции</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
                     <a href="#" class="sideMenu__ico-link">
-                        <img src="images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
+                        <img src="../images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Выйти</span>
                     </a>
                 </li>
@@ -145,11 +145,11 @@
 
             <div class="sideMenu__burger-footer">
                 <a href="#support" class="sideMenu__birger-ico__link">
-                    <img src="images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
+                    <img src="../images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
                     <span class="sideMenu__burger-text">Тех. Поддержка </span>
                 </a>
                 <a href="#" class="sideMenu__settings">
-                    <img class="sideMenu__burger-ico__img" src="images/ico/settings.svg" alt="">
+                    <img class="sideMenu__burger-ico__img" src="../images/ico/settings.svg" alt="">
                     <span class="sideMenu__burger-text">Настройки</span>
                 </a>
             </div>
@@ -159,50 +159,25 @@
 
     <section class="main main--third">
         <div class="container">
-            <div class="post__box post__box--second">
-                <div class="post__box-wrapper">
-
-                    <div class="post__sign-content">
-                        <h1 class="post__sign-title">Регистрация ЛИЧНОГО КАБИНЕТА</h1>
-                        <form class="post__sign-form">
-                            <label>
-                                <input type="text" placeholder="Имя" class="sign-name sign-input">
-                            </label>
-                            <label>
-                                <input type="text" placeholder="Фамилия" class="sign-secondName sign-input">
-                            </label>
-                            <label>
-                                <input type="text" placeholder="Отчество" class="sign-patronymic sign-input">
-                            </label>
-                            <label>
-                                <input type="text" placeholder="ИИН" class="sign-id sign-input">
-                            </label>
-                            <label>
-                                <input type="tel" placeholder="Номер телефона" class="sign-tel sign-input">
-                            </label>
-                            <label>
-                                <input type="email" placeholder="E-mail адрес" class="sign-email sign-input">
-                            </label>
-                            <label>
-                                <input type="password" placeholder="Введите новый пароль"
-                                    class="sign-password sign-input">
-                            </label>
-                            <label>
-                                <input type="password" placeholder="Повторите пароль" class="sign-password sign-input">
-                            </label>
-                        </form>
-                    </div>
-
-                    <div class="post__sign-door">
-                        <a href="#"><img src="https://via.placeholder.com/300" alt="avatar"
-                                class="post__sign-avatar"></a>
-                        <form>
-                            <button type="submit" class="btn-sign">ВОЙТИ</button>
-                            <a href="sign-up-google.html" type="submit" class="btn-sign__google">ВОЙТИ ЧЕРЕЗ GOOGLE</a>
-                        </form>
-                        <p class="post__sign-door__text">Уже есть аккаунт?</p>
-                        <a href="sign-in.html" class="post__sign-door__link">Войти</a>
-                    </div>
+            <div class="post__box post__box--second post__box--third">
+                <div class="post__sign-content post__sign-content--second">
+                    <h1 class="post__sign-title">восстановление пароля</h1>
+                    <form class="post__sign-form">
+                        <label>
+                            <input type="text" placeholder="ИИН" class="sign-id sign-input">
+                        </label>
+                        <label>
+                            <input type="tel" placeholder="Номер телефона" class="sign-tel sign-input">
+                        </label>
+                        <label>
+                            <input type="email" placeholder="E-mail адрес" class="sign-email sign-input">
+                        </label>
+                        <div class="post__sign-btns">
+                            <a href="reset-password-verification.html" class="btn-sign btn-sign--third">ОТПРАВИТЬ</a>
+                            <p class="post__sign-btns__warning">Сообщение о смене пароля будет отправлено на вашу почту,
+                                которую вы указали при регистрации</p>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -212,7 +187,7 @@
         <div class="container">
             <div class="footer__top">
                 <div class="footer__logo">
-                    <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+                    <a href="#"><img src="../images/logo-2.png" alt="logo" class="footer__logo-img"></a>
                 </div>
                 <nav class="footer__nav">
                     <a href="services.html" class="footer__nav-link">Offer</a>
@@ -229,14 +204,14 @@
                 </nav>
                 <div class="footer__social-box">
                     <div class="footer__social">
-                        <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/pinterest.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/vk.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/facebook.svg" alt="social"></a>
                     </div>
                     <div class="footer__social">
-                        <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-                        <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/instagram.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/telegram.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="../images/ico/twitter.svg" alt="social"></a>
                     </div>
                 </div>
                 <div class="footer__contacts">
@@ -262,8 +237,8 @@
                     <a href="#" class="footer__link">Cookies Settings</a>
                 </div>
                 <div class="footer__apps">
-                    <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
-                    <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+                    <a href="#"><img class="footer__app" src="../images/google-play.png" alt="google"></a>
+                    <a href="#"><img class="footer__app" src="../images/app-store.png" alt="google"></a>
                 </div>
                 <button class="footer__btn"></button>
             </div>
@@ -273,7 +248,7 @@
             <div class="footer__top-mini">
                 <div class="footer__top-mini__inner">
                     <div class="footer__logo">
-                        <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+                        <a href="#"><img src="../images/logo-2.png" alt="logo" class="footer__logo-img"></a>
                     </div>
                     <div class="footer__copy">© 2021 Finanlitcy | Финансовая грамотность</div>
                 </div>
@@ -300,16 +275,19 @@
                 <div class="footer__social-mini__inner">
                     <div class="footer__social-box">
                         <div class="footer__social">
-                            <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg"
+                            <a href="#"><img class="footer__social-item" src="../images/ico/pinterest.svg"
                                     alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/vk.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/facebook.svg"
+                                    alt="social"></a>
                         </div>
                         <div class="footer__social">
-                            <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg"
+                            <a href="#"><img class="footer__social-item" src="../images/ico/instagram.svg"
                                     alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-                            <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/telegram.svg"
+                                    alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="../images/ico/twitter.svg"
+                                    alt="social"></a>
                         </div>
                     </div>
                 </div>
@@ -318,8 +296,8 @@
             <div class="footer__apps-mini">
                 <div class="footer__apps-mini__inner">
                     <div class="footer__apps">
-                        <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
-                        <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+                        <a href="#"><img class="footer__app" src="../images/google-play.png" alt="google"></a>
+                        <a href="#"><img class="footer__app" src="../images/app-store.png" alt="google"></a>
                     </div>
                 </div>
             </div>
@@ -356,9 +334,9 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.fancybox.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/slick.min.js"></script>
+    <script src="../js/jquery.fancybox.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
