Fixed links in main `index.html` file

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="burger__box">
                         <span class="burger"></span>
                     </div>
-                    <a href="index.html" class="header__logo">
+                    <a href="ru-RU/index.html" class="header__logo">
                         <img src="images/logo.png" alt="">
                     </a>
                     <ul class="lang-switcher">
@@ -77,14 +77,14 @@
                 </div>
                 <div class="header__side-center">
                     <nav class="header__nav">
-                        <a href="about.html" class="header__nav-link">О НАC</a>
-                        <a href="services.html" class="header__nav-link">УСЛУГИ И ЦЕНЫ</a>
-                        <a href="main.html" class="header__nav-link">ГЛАВНАЯ</a>
-                        <a href="reviews.html" class="header__nav-link">ОТЗЫВЫ</a>
+                        <a href="ru-RU/about.html" class="header__nav-link">О НАC</a>
+                        <a href="ru-RU/services.html" class="header__nav-link">УСЛУГИ И ЦЕНЫ</a>
+                        <a href="ru-RU/main.html" class="header__nav-link">ГЛАВНАЯ</a>
+                        <a href="ru-RU/reviews.html" class="header__nav-link">ОТЗЫВЫ</a>
                     </nav>
                 </div>
                 <div class="header__side-right">
-                    <a href="sign-in.html" class="header__login">АВТОРИЗАЦИЯ</a>
+                    <a href="ru-RU/sign-in.html" class="header__login">АВТОРИЗАЦИЯ</a>
                     <a href="#" class="profile__avatar">
                         <img src="https://via.placeholder.com/70" alt="">
                     </a>
@@ -109,16 +109,16 @@
 
             <ul class="sideMenu__burger-nav">
                 <li class="sideMenu__burger-item__menu">
-                    <a href="about.html" class="sideMenu__burger-link">О НАC</a>
+                    <a href="ru-RU/about.html" class="sideMenu__burger-link">О НАC</a>
                 </li>
                 <li class="sideMenu__burger-item__menu">
-                    <a href="services.html" class="sideMenu__burger-link">УСЛУГИ И ЦЕНЫ</a>
+                    <a href="ru-RU/services.html" class="sideMenu__burger-link">УСЛУГИ И ЦЕНЫ</a>
                 </li>
                 <li class="sideMenu__burger-item__menu">
-                    <a href="main.html" class="sideMenu__burger-link">ГЛАВНАЯ</a>
+                    <a href="ru-RU/main.html" class="sideMenu__burger-link">ГЛАВНАЯ</a>
                 </li>
                 <li class="sideMenu__burger-item__menu">
-                    <a href="reviews.html" class="sideMenu__burger-link">ОТЗЫВЫ</a>
+                    <a href="ru-RU/reviews.html" class="sideMenu__burger-link">ОТЗЫВЫ</a>
                 </li>
             </ul>
 
@@ -170,7 +170,7 @@
                     <p class="intro__text">А также у нас действует скидки до 50% на все виды наших услуг.
                         Торопитесь,
                         скидка будет действительна до 01.03.21 года!</p>
-                    <a href="sign-up.html" class="intro__btn">Регистрация</a>
+                    <a href="ru-RU/sign-up.html" class="intro__btn">Регистрация</a>
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
             <div class="post__box">
                 <div class="post__slider-title">
                     <h1 class="post__title">наши услуги</h1>
-                    <a href="services.html" class="post__more">ПОДРОБНЕЕ</a>
+                    <a href="ru-RU/services.html" class="post__more">ПОДРОБНЕЕ</a>
                 </div>
                 <div class="post__slider">
                     <div class="post__slider-item">
@@ -370,15 +370,15 @@
                     <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
                 </div>
                 <nav class="footer__nav">
-                    <a href="services.html" class="footer__nav-link">Offer</a>
-                    <a href="about.html" class="footer__nav-link">О компании</a>
-                    <a href="services.html" class="footer__nav-link">Предлагаемые услуги</a>
-                    <a href="why-choose.html" class="footer__nav-link">Почему выбирают нас?</a>
+                    <a href="ru-RU/services.html" class="footer__nav-link">Offer</a>
+                    <a href="ru-RU/about.html" class="footer__nav-link">О компании</a>
+                    <a href="ru-RU/services.html" class="footer__nav-link">Предлагаемые услуги</a>
+                    <a href="ru-RU/why-choose.html" class="footer__nav-link">Почему выбирают нас?</a>
 
                 </nav>
                 <nav class="footer__nav">
-                    <a href="reviews.html" class="footer__nav-link">Отзывы</a>
-                    <a href="profile.html" class="footer__nav-link">Личный кабинет</a>
+                    <a href="ru-RU/reviews.html" class="footer__nav-link">Отзывы</a>
+                    <a href="ru-RU/profile.html" class="footer__nav-link">Личный кабинет</a>
                     <a href="#" class="footer__nav-link">Вопросы и ответы</a>
                     <a href="#" class="footer__nav-link">Наша история</a>
                 </nav>
@@ -437,14 +437,14 @@
             <div class="footer__nav-mini">
                 <div class="footer__nav-mini__inner">
                     <nav class="footer__nav">
-                        <a href="services.html" class="footer__nav-link">Offer</a>
-                        <a href="about.html" class="footer__nav-link">О компании</a>
-                        <a href="services.html" class="footer__nav-link">Предлагаемые услуги</a>
-                        <a href="why-choose.html" class="footer__nav-link">Почему выбирают нас?</a>
+                        <a href="ru-RU/services.html" class="footer__nav-link">Offer</a>
+                        <a href="ru-RU/about.html" class="footer__nav-link">О компании</a>
+                        <a href="ru-RU/services.html" class="footer__nav-link">Предлагаемые услуги</a>
+                        <a href="ru-RU/why-choose.html" class="footer__nav-link">Почему выбирают нас?</a>
                     </nav>
                     <nav class="footer__nav">
-                        <a href="reviews.html" class="footer__nav-link">Отзывы</a>
-                        <a href="profile.html" class="footer__nav-link">Личный кабинет</a>
+                        <a href="ru-RU/reviews.html" class="footer__nav-link">Отзывы</a>
+                        <a href="ru-RU/profile.html" class="footer__nav-link">Личный кабинет</a>
                         <a href="#" class="footer__nav-link">Вопросы и ответы</a>
                         <a href="#" class="footer__nav-link">Наша история</a>
                     </nav>
