`index.html` has been translated into English

--- a/en-US/index.html
+++ b/en-US/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Finanlitcy | About</title>
+    <title>Finanlitcy</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/slick.css">
     <link rel="stylesheet" href="../css/jquery.fancybox.css">
@@ -157,7 +157,30 @@
         </div>
     </section>
 
-    <section class="main main--second">
+    <section class="intro">
+        <div class="container">
+            <div class="intro__wrapper">
+                <div class="intro__content">
+                    <h1 class="intro__slogan">Not sure how to improve your financial literacy? Or can't you keep track
+                        of your money?
+                    </h1>
+                    <p class="intro__text">Then you've come to the right place! Here we provide you with services for
+                        accounting for personal expenses and income, budget planning and statistics collection.
+                        And also we have discounts up to 50% on all types of our services. Hurry up, the discount will
+                        be valid until 03/01/21!</p>
+                    <p class="intro__text">А также у нас действует скидки до 50% на все виды наших услуг.
+                        Торопитесь,
+                        скидка будет действительна до 01.03.21 года!</p>
+                    <a href="sign-up.html" class="intro__btn">Registration</a>
+                </div>
+            </div>
+        </div>
+        <div class="intro__img">
+            <img src="../images/bg-intro.png" alt="bg">
+        </div>
+    </section>
+
+    <section class="main">
         <div class="container">
             <div class="post__box">
                 <div class="post__box-wrapper">
@@ -198,6 +221,137 @@
                     </div>
                 </div>
             </div>
+
+            <div class="post__box">
+                <div class="post__slider-title">
+                    <h1 class="post__title">Our services</h1>
+                    <a href="services.html" class="post__more">DETAILED</a>
+                </div>
+                <div class="post__slider">
+                    <div class="post__slider-item">
+                        <img src="../images/slider/1.png" alt="img" class="post__slider-bg">
+                        <h2 class="post__slider-text">
+                            Drawing up a personal financial plan
+                        </h2>
+                    </div>
+
+                    <div class="post__slider-item">
+                        <img src="../images/slider/2.png" alt="img" class="post__slider-bg">
+                        <h2 class="post__slider-text">
+                            Consultation with specialists
+                        </h2>
+                    </div>
+
+                    <div class="post__slider-item">
+                        <img src="../images/slider/3.png" alt="img" class="post__slider-bg">
+                        <h2 class="post__slider-text">
+                            Assistance in obtaining funding
+                        </h2>
+                    </div>
+
+                    <div class="post__slider-item">
+                        <img src="../images/slider/2.png" alt="img" class="post__slider-bg">
+                        <h2 class="post__slider-text">
+                            Business planning, drawing up a business plan
+                        </h2>
+                    </div>
+
+                    <div class="post__slider-item">
+                        <img src="../images/slider/1.png" alt="img" class="post__slider-bg">
+                        <h2 class="post__slider-text">
+                            Drawing up a personal financial plan
+                        </h2>
+                    </div>
+
+                    <div class="post__slider-item">
+                        <img src="../images/slider/2.png" alt="img" class="post__slider-bg">
+                        <h2 class="post__slider-text">
+                            Consultation with specialists
+                        </h2>
+                    </div>
+
+                    <div class="post__slider-item">
+                        <img src="../images/slider/3.png" alt="img" class="post__slider-bg">
+                        <h2 class="post__slider-text">
+                            Assistance in obtaining funding
+                        </h2>
+                    </div>
+
+                    <div class="post__slider-item">
+                        <img src="../images/slider/2.png" alt="img" class="post__slider-bg">
+                        <h2 class="post__slider-text">
+                            Business planning, drawing up a business plan
+                        </h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="post__box">
+                <h1 class="post__title">why choose us?</h1>
+                <img src="../images/img2.png" alt="" class="post__img-full">
+            </div>
+
+            <div class="post__box">
+                <h1 class="post__title">comments from our clients</h1>
+                <div class="post__slider-reviews-1">
+                    <div class="post__reviews-item">
+                        <div class="post__reviews__name-box">
+                            <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
+                            <div class="post__reviews__client">
+                                <div class="post__reviews-name">Name</div>
+                                <div class="post__reviews-rating">Rating: positive</div>
+                            </div>
+                        </div>
+                        <div class="post__reviews-text">
+                            I like this site very much. Now it is really very convenient for me to look after my
+                            finances! Thank.
+                        </div>
+                    </div>
+
+                    <div class="post__reviews-item">
+                        <div class="post__reviews__name-box">
+                            <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
+                            <div class="post__reviews__client">
+                                <div class="post__reviews-name">Name</div>
+                                <div class="post__reviews-rating">Rating: positive</div>
+                            </div>
+                        </div>
+                        <div class="post__reviews-text">
+                            I like this site very much. Now it is really very convenient for me to look after my
+                            finances! Thank.
+                        </div>
+                    </div>
+
+                    <div class="post__reviews-item">
+                        <div class="post__reviews__name-box">
+                            <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
+                            <div class="post__reviews__client">
+                                <div class="post__reviews-name">Name</div>
+                                <div class="post__reviews-rating">Rating: positive</div>
+                            </div>
+                        </div>
+                        <div class="post__reviews-text">
+                            I like this site very much. Now it is really very convenient for me to look after my
+                            finances! Thank.
+                        </div>
+                    </div>
+
+                    <div class="post__reviews-item">
+                        <div class="post__reviews__name-box">
+                            <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
+                            <div class="post__reviews__client">
+                                <div class="post__reviews-name">Name</div>
+                                <div class="post__reviews-rating">Rating: positive</div>
+                            </div>
+                        </div>
+                        <div class="post__reviews-text">
+                            I like this site very much. Now it is really very convenient for me to look after my
+                            finances! Thank.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
