`reset-password-verification.html` has been translated into English

--- a/en-US/reset-password-verification.html
+++ b/en-US/reset-password-verification.html
@@ -164,18 +164,17 @@
                     <h1 class="post__sign-title">password recovery</h1>
                     <form class="post__sign-form">
                         <label>
-                            <input type="text" placeholder="Your ID" class="sign-id sign-input">
+                            <input type="password" placeholder="New Password" class="sign-password sign-input">
                         </label>
                         <label>
-                            <input type="tel" placeholder="Phone number" class="sign-tel sign-input">
-                        </label>
-                        <label>
-                            <input type="email" placeholder="E-mail address" class="sign-email sign-input">
+                            <input type="password" placeholder="Confirm password" class="sign-password sign-input">
                         </label>
                         <div class="post__sign-btns">
-                            <a href="reset-password-verification.html" class="btn-sign btn-sign--third">  SEND</a>
-                            <p class="post__sign-btns__warning">A message about changing your password will be sent to
-                                your email address that you specified during registration</p>
+                            <button type="submit" class="btn-sign btn-sign--third">Continue</button>
+                            <label>
+                                <input class="post__sign-btns__input" type="checkbox" name="password" id="">
+                            </label>
+                            <p class="post__sign-btns__password">Remember password <br> at next login</p>
                         </div>
                     </form>
                 </div>
