Added transition between languages

--- a/en-US/reviews.html
+++ b/en-US/reviews.html
@@ -70,7 +70,7 @@
             <a href="#" class="lang-ru">
               <li>EN</li>
             </a>
-            <a href="#" class="lang-en">
+            <a href="../ru-RU/reviews.html" class="lang-en">
               <li>RU</li>
             </a>
           </ul>
