--- a/en-US/why-choose.html
+++ b/en-US/why-choose.html
@@ -70,7 +70,7 @@
                         <a href="#" class="lang-ru">
                             <li>EN</li>
                         </a>
-                        <a href="#" class="lang-en">
+                        <a href="../ru-RU/why-choose.html" class="lang-en">
                             <li>RU</li>
                         </a>
                     </ul>
