--- a/ru-RU/reset-password.html
+++ b/ru-RU/reset-password.html
@@ -70,7 +70,7 @@
                         <a href="#" class="lang-ru">
                             <li>RU</li>
                         </a>
-                        <a href="#" class="lang-en">
+                        <a href="../en-US/reset-password.html" class="lang-en">
                             <li>EN</li>
                         </a>
                     </ul>
