--- a/ru-RU/sign-up.html
+++ b/ru-RU/sign-up.html
@@ -70,7 +70,7 @@
                         <a href="#" class="lang-ru">
                             <li>RU</li>
                         </a>
-                        <a href="#" class="lang-en">
+                        <a href="../en-US/sign-up.html" class="lang-en">
                             <li>EN</li>
                         </a>
                     </ul>
